# gazebo_pcl_project

./: README.md
gazebo_perception_msgs/: CMakeLists.txt  package.xml
gazebo_perception_msgs/msg/: Object.msg
gazebo_pkg/: CMakeLists.txt  package.xml  test.layout
gazebo_pkg/config/: test_control.yaml  test_control.yaml~
gazebo_pkg/custom_pose_message/msgs/: CMakeLists.txt  custom_pose_request.proto~
gazebo_pkg/include/: AddTextGazebo.h  AddTextToScreen.h  DepthCameraPointCloudSaver.h  DrawLinesPlugin.h  DrawTextPlugin.h  DynamicJoint.h  EuclideanClusterCategorizer.h  KitchenFinalPlugin.h  ModelPluginForBenjamin.h  MoveKinectCamera.h  MoveKinectCameraPlugin.h  OgreTest.h  SystemPluginArgs.h  TrajectoryFactorySystemPlugin.h  VisualPluginTest.h  model_push.h  pcl_processing_module.h  ros_get_coord.h  ros_plugin.h  ros_plugin_service.h  stlWriter.h  stl_loader.h  system_gui.h  vfh_test.h  vtkIOGeometryModule.h  world_edit.h
gazebo_pkg/launch/: state.launch  state2.launch  state2.launch~  state3.launch  state3.launch~
gazebo_pkg/media/materials/textures/: bowl.dae  bowl.stl
gazebo_pkg/models/KinectCamera/: kinectCamera.sdf  kinectCamera.urdf  kinectCamera.xacro  model.config
gazebo_pkg/models/RobotStatePublisherModelBeispiel/: RobotStatePublisherModel.sdf  RobotStatePublisherModel.urdf  model.config
gazebo_pkg/models/bottle/: bottle.sdf  model.config
gazebo_pkg/models/bowl/: bowl.sdf  model.config
gazebo_pkg/models/bowl1/: bowl1.sdf  model.config
gazebo_pkg/models/box/: box.sdf  model.config  model.config~
gazebo_pkg/models/box1/: box1.sdf  model.config
gazebo_pkg/models/box_wall/: box_wall.sdf  model.config
gazebo_pkg/models/cuboid/: cuboid.urdf  cuboid.urdf.xacro  cuboid.urdf.xacro~  cuboid.xml  cuboid.xml~  model.config  model.config~
gazebo_pkg/models/cylinder/: cylinder.sdf  model.config~
gazebo_pkg/models/first_test/: first.sdf  first.sdf~  first.urdf~  model.config  second.sdf
gazebo_pkg/models/fork/: fork.sdf  model.config
gazebo_pkg/models/icedtea/meshes/: icedtea.stl
gazebo_pkg/models/icedtea_rotated/meshes/: icedtea_rotated.stl
gazebo_pkg/models/kitchen/: de_comparat.urdf  ias_kitchen.urdf  ias_kitchen.urdf.xml  ias_kitchen.urdf.xml~  ias_kitchen.urdf~  model.config  model.config~
gazebo_pkg/models/kitchen_final/: kitchen_area.urdf  model.config
gazebo_pkg/models/kitchen_table/: model.config  model.config~  new_table.sdf  table.sdf
gazebo_pkg/models/knife/: knife.sdf  model.config
gazebo_pkg/models/mondamin/: model.config  mondamin.sdf
gazebo_pkg/models/mug/: model.config  mug.sdf
gazebo_pkg/models/mug1/: model.config  mug1.sdf
gazebo_pkg/models/pancake_maker/: model.config  pancake_maker.sdf
gazebo_pkg/models/pancake_maker/meshes/: pancake_maker.stl
gazebo_pkg/models/plate/: model.config  plate.sdf
gazebo_pkg/models/pot/: model.config  pot.sdf
gazebo_pkg/models/pot/meshes/: pot.dae  pot.stl
gazebo_pkg/models/pot1/: model.config  pot1.sdf
gazebo_pkg/models/robot_test/: frames.gv  my_robot.urdf
gazebo_pkg/models/robotsimplu/: model.config  model.config~  sherpa_rover11.urdf  sherpa_rover11.urdf~
gazebo_pkg/models/small_table/: model.config  model.config~  small_table.xml  small_table.xml~
gazebo_pkg/models/table/: model.config  model.config~
gazebo_pkg/models/teapot/: model.config  teapot.sdf
gazebo_pkg/models/teapot/meshes/: teapot.stl
gazebo_pkg/models/test_models_one/: first_model.urdf  model.config  model.config~  second_model.urdf~
gazebo_pkg/models/test_models_two/: model.config  model.config~  second_model.urdf  second_model.urdf~
gazebo_pkg/msg/: Object.msg  SherpaWorldObject.msg
gazebo_pkg/src/: AddTextGazebo.cpp  AddTextToScreen.cpp  ClusterExtraction.cpp  ConcaveHullCreation.cpp  ConcaveHullPolygon.cpp  DepthCameraPointCloudSaver.cpp  DepthImageRawToCvMat.cpp  DrawLinesPlugin.cpp  DrawTextPlugin.cpp  DynamicJoint.cpp  EuclideanClusterCategorizer.cpp  EuclideanClusterProba0.cpp  ExtractingIndices.cpp  Herle_Project.cpp  Herle_Project_PointCloud.cpp  JointStatePublisherTry.cpp  KeyPressEventExampleFromGazebo.cpp  KitchenFinalPlugin.cpp  ModelPluginForBenjamin.cpp  MoveKinectCamera.cpp  MoveKinectCameraClient.cpp  MoveKinectCameraPlugin.cpp  MultiPlaneSegmenter.cpp  OgreTest.cpp  OpenPCDAndCompare.cpp  PlanarSegmentation.cpp  RGBImageSaver.cpp  SendStampedPose.cpp  SystemPluginArgs.cpp  ThreadExample.cpp  TrajectoryFactorySystemPlugin.cpp  VisualPluginTest.cpp  add_coord_client.cpp  add_object_client.cpp  add_object_inspection_camera_pos.cpp  add_object_inspection_number.cpp  add_text_client.cpp  add_text_publisher_client.cpp  add_two_ints_client.cpp  classifier_server.cpp  (+15 more)
gazebo_pkg/srv/: Classifier.srv  GetCoordFromClient.srv  GetObject.srv  GetTextParam.srv  ObjectCanSendNextCamPos.srv  ObjectInspectionBounding.srv  ObjectInspectionCameraPos.srv  ObjectInspectionCenter.srv  ObjectInspectionClassifier.srv  ObjectInspectionClassifyClouds.srv  ObjectInspectionCloud.srv  ObjectInspectionFinalCameraPos.srv  ObjectInspectionNumber.srv  ObjectInspectionQuaternion.srv  ObjectInspectionStart.srv  SendStampedPose.srv  VFHTestCorrectIndexes.srv
gazebo_pkg/worlds/: DynamicJoint.world  DynamicJoint.world~  MeshWorld.world  RobotStatePublisherWorld.world  VisualPluginTest.world  factory.world  factory.world~  first_world.world  kitchen.world  kitchen.world~  model_world.world  model_world.world~  ros_get_coord.world  ros_plugin.world  ros_plugin_service.world  test_worlds.world  test_worlds.world~  world_edit.world
gazebo_ros_pkgs/gazebo_plugins/src/: gazebo_ros_openni_kinect_test.cpp
