<?xml version="1.0"?>
<package>
  <name>gazebo_pkg</name>
  <version>0.0.0</version>
  <description>The gazebo_pkg package</description>

  <maintainer email="furdek@todo.todo">furdek</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>sdformat</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>gazebo_ros_pkgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>sdformat</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>pcl_conversions</run_depend>

</package>
